# povarenok_scrapper

./: .gitignore  README.md  get_categories.py  load_categories.py  main.py  paths.py  proxy_auth_data.py.example  pyproject.toml  run.sh  test.py  tg_bot.py
db/: base.py  tables.py
decorators/: mark_time.py
settings/: config.py.example  headers.py  paths.py
